<resources>
    <string name="app_name">FantasticCard</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_choose">Veuillez sélectionner une image</string>
    <string name="choose_image">Ouvrir l\'album</string>
    <string name="edit_image">Modifier l\'image</string>
    <string name="add_image">Ajouter l\'image à ma carte</string>

    <string name="generate_pdf_button_text">Créer ma carte postale !</string>

    <string name="page1">Texte page 1</string>
    <string name="page2">Texte page 2</string>
    <string name="page3">Texte page 3</string>
    <string name="page4">Texte page 4</string>
</resources>
