<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.CardActivity" >

    <ProgressBar
        android:id="@+id/pBAsync"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/page1"
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"/>

        <TextView
            android:text="@string/page2"
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/textview1"
            android:layout_marginTop="40dp"/>

        <TextView
            android:text="@string/page3"
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/textview2"
            android:layout_marginTop="40dp"/>

        <TextView
            android:text="@string/page4"
            android:id="@+id/textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/textview3"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textview1"
            android:layout_marginLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:layout_alignBaseline="@id/textview1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>


        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textview2"
            android:layout_alignLeft="@id/editText1"
            android:layout_toRightOf="@+id/textview2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_below="@id/editText1"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textview3"
            android:layout_alignLeft="@id/editText2"
            android:layout_toRightOf="@+id/textview3"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_below="@id/editText2"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textview4"
            android:layout_alignLeft="@id/editText3"
            android:layout_toRightOf="@+id/textview4"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_below="@id/editText3"
            android:layout_marginTop="40dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/generatePdfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/generate_pdf_button_text" />

</RelativeLayout>
